# moveit2_pick_place

./: .gitignore  ARCHITECTURE_TUTORIAL.md  INSTRUCTIONS.md  README.md
ros2_ws/src/arm_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/arm_bringup/config/: ros2_controllers.yaml  ros_gz_bridge.yaml
ros2_ws/src/arm_bringup/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/arm_bringup/models/red_box_apriltag/: model.config  model.sdf
ros2_ws/src/arm_bringup/urdf/: panda.ros2_control.xacro  panda.urdf.xacro  panda_hand.ros2_control.xacro
ros2_ws/src/arm_bringup/worlds/: pick_place.sdf
ros2_ws/src/arm_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.srdf
ros2_ws/src/arm_moveit_config/launch/: move_group.launch.py
ros2_ws/src/pick_place_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/pick_place_control/config/: scene_objects.yaml
ros2_ws/src/pick_place_control/launch/: pick_place_demo.launch.py
ros2_ws/src/pick_place_control/pick_place_control/: pick_place_node.py  planning_scene_loader.py  pose_estimator.py  vlm_detector.py  yolo_detector.py
